--- a/style/main.css
+++ b/style/main.css
@@ -9,10 +9,14 @@
     box-sizing: border-box;
 }
 
+/* ELEMENTOS BASE*/
+
 body {
     background: var(--preta); /* Cor de fundo */
     font-family: 'Times New Roman', Times, serif;
+    color: white;
 }
+
 header .logo {
     color: var(--vermelho);
     margin-left: 5px;
@@ -35,4 +39,16 @@ header .container {
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
+}
+
+/* FILME PRINCIPAL*/
+
+.filme-principal {
+    font-size: 16px;
+    background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,100,.50)100%), url('/img/capa-house.jpg');
+    height: 400px;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
 }
