--- a/style/main.css
+++ b/style/main.css
@@ -48,7 +48,49 @@ header .container {
     background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,100,.50)100%), url('/img/capa-house.jpg');
     height: 400px;
     background-size: cover;
-
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.filme-principal .descricao {
+    /* DESCRIÇÃO DO FILME NO BANNER PRINCIPAL*/
+    margin-top: 10PX;
+    margin-bottom: 40px;
+}
+
+.filme-principal .titulo {
+    /* TÍTULO DO FILME NO BANNER PRINCIPAL*/
+    margin-top: 5%;
+    font-family: 'Trebuchet MS', Arial, sans-serif;
+    font-size: 40px;
+}
+
+.botao {
+    background-color: rgba(0,0,0,.50);
+    border: none;
+    color: white;
+    padding: 15px 30px;
+    margin-right: 15px;
+    font-size: 12px;
+    cursor: pointer;
+    transition: .3s ease all;
+}
+
+.botao:hover {
+    background-color: white;
+    color: black;
+}
+
+.botao i {
+    margin-right: 8px;
+}
+
+.container {
+    margin-left: 20px;
+}
+
+.filme-principal .container {
+    width: 70%;
 }
